--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -1,157 +1,125 @@
+body{
+    margin: 0;
+    padding: 0;
+    font-family: "Segoe UI" , "Segoe" , "SegoeUI-Regular-final", Tahoma, Helvetica, Arial, sans-serif;
+}
 
-.container-login {
+
+.login{
     width: 100%;
     height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: #FFF;
 }
 
-.img-container {
-    position: absolute;
-    z-index: -1;
-    width: 100%;
+.left__login{
+    background-color: black;
     height: 100%;
-    background-color: #000;
-    filter: brightness(20%);
+    width: 60%;
+    background: url(../img/banner-1.jpg) center;
+    background-repeat: no-repeat;
+    background-size: cover; 
 }
 
-.box-login {
-    height:  60vh;
-    width: 40vw;
-    border-radius: 8px;
-    border: 3px solid var(--cor-quartenaria);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--cor-secundaria);
-    animation-name: kick;
-    animation-duration: 3s;
-}
+.right__login{
+    width: 40%;
+    text-align: center;
+    margin: 20px;
 
-.box-login form {
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    height: 50vh;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: center;
 }
-.box-login form label {
+
+.right__login img{
+    width: 200px;
+    margin: 20px;
+}
+
+.right__login span {
+    margin: 20px;
+
     font-size: 25px;
 }
 
-.box-login form input {
-    height: 30px;
+#right__span-titulo{
+    margin-bottom: 20px;
+}
+
+.right__input{
+    outline: none;
+    width: 350px;
+    height: 58px;
+    padding: 0px 3px 0px 3px;
+    border: solid 1px #BABABA;
+    margin-bottom: 8px;
+
     font-size: 20px;
-    padding-left: 10px;
-    border-color: var(--cor-quartenaria);
-    border-radius: 4px;
-    background-color: rgb(243, 251, 253);
-    color: var(--cor-quartenaria);
+
+    transition-duration: .5s;
 }
-.box-login form .div-btn {
-    display: flex;
-    width: 30vw;
-    align-items: center;
-    justify-content: space-around;
+.right__input:focus {
+    transform: scale(1.05);
+    border-color: #016795;
 }
 
-.box-login form .div-btn button {
-    width: 10vw;
-    height: 5vh;
-    color: var(--cor-quartenaria);
-    font-weight: bold;
+.right__button{
+    width: 50%; 
+    height: 50px;
+
     border: none;
-    position: relative;
-    transition-duration:.5s;
-    border-radius: 8px;
+
+    font-size: 25px;
+    font-family:"Segoe UI";
+
+    background-color: #0000f5;
+    color: white;
+
     cursor: pointer;
-    background-color: #FFF;
-    border: 3px solid var(--cor-quartenaria);
-}
 
-.box-login form .div-btn button::before {
-    content: '';
-    width: 9.6vw;
-    height: 0;
-    position: absolute;
+    margin: 20px;
+
     transition-duration: .5s;
-    border-radius: 4px;
-    z-index: -1;
-    left: 0;
-    top: 0;
-    background: var(--cor-quartenaria);
 }
 
-.box-login form .div-btn button:hover {
-    transform: scale(1.2);
-    color: black;
-    border-color: #000;
+.right__button:hover{
+    transform: scale(1.08);
+
+    box-shadow: 2px 2px 3px black;
 }
 
-.box-login form .div-btn button:hover::before {
-    transition-duration: .5s;
-    transform: translateY(-1px);
-    height: 4.24vh;
-}
+@media (max-width: 879px) {
+    .login {
+        justify-content: center;
+        align-items: center;
+    }
+    .left__login {
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+    }
+    .right__login {
+        position: absolute;
+        background-color: white;
 
-.box-login form .link-passwd {
-    animation-name: aparecer;
-    animation-duration: 4s;
-    transition-duration: 1s;
-    font-size: 1em;
-    color: #FFF;
-    width: fit-content;
-}
-.box-login form .link-passwd:hover {
-    transform: scale(1.2) translateX(10px);
-    color: var(--cor-quartenaria);
-}
-
-@keyframes kick {
-    0% {
-        opacity: 0%;
-        transform: translateY(-70px);
-    }
-    40% {
-        opacity: 0%;
-        transform: translateY(-70px);
-    }
-    45% {
-        opacity: 100%;
-        transform: translateY(0);
-    }
-    50%{
-        transform: translateY(-30px);
-    }
-    55% {
-        transform: translateY(0);
-    }
-    60%{
-        transform: translateY(-20px);
-    }
-    65% {
-        transform: translateY(0);
-    }
-    70% {
-        transform: translateY(-10);
-    }
-    85%{
-        transform: translateY(0);
+        width: 70%;
+        
+        padding: 30px;
     }
 }
 
-@keyframes aparecer {
-    0% {
-        opacity: 0;
+@media (max-width:462px) {
+    .right__login img {
+        width: 40vw;
     }
-    80% {
-        opacity: 0;
+
+    .right__login input {
+        width: 40vh;
     }
-    100% {
-        opacity: 100%;
+}
+
+@media (max-width:308px) {
+    .right__login input {
+        width: 100%;
     }
 }
